--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="table_player_points_text_size">36sp</dimen>
     <dimen name="table_player_name_text_size">32sp</dimen>
     <dimen name="table_player_penalty_points_text_size">20sp</dimen>
-    <dimen name="table_player_round_num_text_size">24sp</dimen>
+    <dimen name="table_player_round_num_text_size">28sp</dimen>
+    <dimen name="table_header_height">88dp</dimen>
 
 </resources>
