--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal|top"
-    android:layout_marginTop="@dimen/standard_margin"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:padding="@dimen/standard_margin">
 
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/standard_margin">
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="1dp" />
+
+        <TextView
+            android:id="@+id/tvCustomNumPadDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="@string/points"
+            android:maxLength="4"
+            android:maxLines="1"
+            android:textColor="@color/colorAccent"
+            android:textColorHint="@color/colorAccent"
+            android:alpha=".3"
+            android:textSize="48sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="1dp" />
+
+    </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">
 
@@ -37,7 +65,7 @@
 
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
         android:gravity="center_horizontal">
@@ -67,7 +95,7 @@
 
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
         android:gravity="center_horizontal">
@@ -97,15 +125,18 @@
 
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
         android:gravity="center_horizontal">
 
         <Button
+            android:id="@+id/btCustomNumPadDelete"
+            style="@style/buttonNumPad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible" />
+            android:text="@string/x"
+            android:textStyle="normal" />
 
         <Button
             android:id="@+id/btCustomNumPad0"
@@ -115,11 +146,12 @@
             android:text="@string/zero" />
 
         <Button
-            android:id="@+id/btCustomNumPadBack"
+            android:id="@+id/btCustomNumPadBackspace"
             style="@style/buttonNumPad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/back" />
+            android:text="@string/back"
+            android:textStyle="normal" />
 
     </TableRow>
 
