--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -106,8 +106,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabOldGames"
-        android:layout_width="@dimen/quadruple_standard_margin"
-        android:layout_height="@dimen/quadruple_standard_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/double_standard_margin"
         android:src="@drawable/ic_play_arrow_white_24px"/>
