--- a/app/src/main/res/layout/points_dialog_fragment.xml
+++ b/app/src/main/res/layout/points_dialog_fragment.xml
@@ -1,53 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@android:color/white">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <es.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
+        android:id="@+id/cdsPointsDialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/quadruple_standard_margin"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:layout_marginEnd="@dimen/quadruple_standard_margin"
-        android:gravity="center"
-        android:hint="@string/hand_points">
+        android:layout_height="wrap_content" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tietPointsDialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:digits="0123456789"
-            android:gravity="center"
-            android:inputType="numberDecimal"
-            android:maxLength="4"
-            android:maxLines="1" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <include
+    <!--<View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:id="@+id/iPointsDialogCustomNumpad"
-        layout="@layout/custom_num_pad" />
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/standard_margin"
+        android:background="@color/grayMM" />-->
 
-    <Button
+    <es.etologic.mahjongscoring2.app.custom_views.CustomNumPad
+        android:id="@+id/cnpPointsDialog"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/quadruple_standard_margin"
         android:layout_marginTop="@dimen/double_standard_margin"
-        android:layout_marginEnd="@dimen/quadruple_standard_margin"
-        android:gravity="center"
-        android:text="@string/save"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:background="@drawable/button_rounded_corners_green"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored" />
+        android:orientation="horizontal"
+        android:layout_gravity="end"
+        android:layout_marginEnd="@dimen/standard_margin">
+
+        <Button
+            android:id="@+id/btPointsDialogCancel"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/cancel"
+            android:textColor="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/btPointsDialogDraw"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/draw"
+            android:textColor="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/btPointsDialogOk"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/ok"
+            android:textColor="@color/colorAccent" />
+
+    </LinearLayout>
 
 </LinearLayout>
